--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,19 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=7012c6d8d198bb
+MAIL_PASSWORD=9fa55b97342a08
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=trashxxyz@gmail.com
+MAIL_FROM_NAME="${APP_NAME}"
+
+
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
